[package]
name = "bund_language_parser"
version = "0.2.0"
edition = "2021"
description = "BUND programming language parser"
license-file = "LICENSE"
repository = "https://github.com/vulogov/bund_language_parser"
categories = ["parser-implementations"]
keywords = ["language", "stack", "concatenative", "lambda", "dynamic"]

[dependencies]
easy-error = "1.0.0"
lexical-core = "1.0.1"
log = "0.4.22"
pest = "2.7.12"
pest_derive = "2.7.12"
rust_dynamic = ">=0.*.*"
